hphp/hack/test/typecheck/lambda/lambda_classname.php.like_types.exp
File "lambda_classname.php", line 10, characters 29-34:
Invalid argument (Typing[4110])
File "lambda_classname.php", line 6, characters 13-15:
Expected Tv1
File "lambda_classname.php", line 5, characters 3-18:
But got dynamic because it is an unenforceable type
File "lambda_classname.php", line 21, characters 29-34:
Invalid argument (Typing[4110])
File "lambda_classname.php", line 16, characters 13-15:
Expected Tv1
File "lambda_classname.php", line 17, characters 3-18:
But got dynamic because it is an unenforceable type
